--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -10,7 +10,7 @@
     <div class="card text-white bg-success mb-3; col-lg-6;" style="max-width:23rem;">
         <div class="card-header">Carga de archivos</div>
         <div class="card-body">
-            <h4 class="card-title">Subiras los archivos por node-js</h4>
+            <h4 class="card-title">Subiras los archivos con express y node-js</h4>
             <form action="/upload" method="post" enctype="multipart/form-data">
                 <div class="form-group">
                     <div class="custom-file">
